--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,9 @@ body{
     margin-right: auto;
     margin-bottom: 20px;
 }
+.globalHeader > .searchLogo:hover{
+    cursor: pointer;
+}
 @media (min-width: 500px){
     .globalHeader > .searchLogo{
         max-width: 230px;
@@ -75,7 +78,7 @@ body{
     height: 40px;
     padding: 0 10px;
     border: none;;
-    border-radius: 5px 0 0 5px;
+    border-radius: 6px 0 0 6px;
     border: 1px solid #ddd;
 }
 @media (min-width: 500px){
@@ -91,6 +94,9 @@ body{
     justify-content: center;
     align-items: center;
 }
+.searchForm > .searchButton:hover{
+    cursor: pointer;
+}
 @media (min-width: 500px){
     .searchForm > .searchButton{
         width: 80px;
@@ -101,21 +107,31 @@ body{
     height: 20px;
 }
 .globalMain{
-    max-width: 900px;
-    max-height: 370px;
-    overflow: hidden;
+    /*max-width: 900px;
+    max-height: 370px;*/
+    /*overflow: hidden;*/
     margin-left: auto;
     margin-right: auto;
+    background: #fdfdfd;
+}
+@media (max-width: 500px){
+
 }
 @media (min-width: 500px){
     .globalMain{
-        min-width: 900px;
-        max-height: 600px;
+        /*min-width: 900px;
+        max-height: 600px;*/
+        width: 920px;
+        height: 620px;
         overflow: hidden;
+        border-radius: 6px;
+        -moz-box-shadow:2px 2px 20px #B5B5B5;
+        -webkit-box-shadow:2px 2px 20px #B5B5B5; 
+        box-shadow:2px 2px 20px #B5B5B5;
     }
 }
 .siteModule{
-    background: white;
+    
 }
 @media (min-width: 500px){
     .siteModule{
@@ -125,100 +141,116 @@ body{
 }
 .siteModule .siteModuleGroup{
     height: 30px;
-    background: #CDCDCD;
-    display: none;
+    background: #f5f5f7;
 }
 @media (min-width: 500px){
     .siteModule .siteModuleGroup{
-        display: block;
         height: 60px;
-        border-radius: 5px 5px 0 0;
-        padding: 12px 20px;
-        border: 2px solid green;
+        border-radius: 6px 6px 0 0;
+        border: 2px solid #eee;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
-.siteModule .siteSwitch{
+.siteModuleGroup .siteSwitch{
     display: none;
 }
 @media (min-width: 500px){
-    .siteModule .siteSwitch{
+    .siteModuleGroup .siteSwitch{
         display: inline;
         position: absolute;
         top: 15px;
         right: 10px;
     }
-    .siteModule .siteSwitch .icon{
+    .siteModuleGroup .siteSwitch:hover{
+        cursor: pointer;
+    }
+    .siteModuleGroup .siteSwitch .icon{
         width: 80px;
         height: 30px;
     }
 }
 @media (min-width: 500px){
-    .siteModuleGroup .siteGroupList{
+    .siteModuleGroup .siteGroupAll{
+        display: inline-block;
+        position: relative;
+    }
+    .siteGroupAll .groupArrow{
+        display: none;
+    }
+    .siteGroupAll .groupArrow:hover{
+        cursor:pointer;
+    }
+    .siteGroupAll .groupArrow .icon{
+        width: 30px;
+        height: 30px;
+    }
+    .siteGroupAll .Arrowleft{
+        position: absolute;
+        left: -1.8em;
+        bottom: 1px;
+    }
+    .siteGroupAll .Arrowright{
+        position: absolute;
+        right: -1.8em;
+        bottom: 1px;
+    }
+    .siteGroupAll .siteGroupList{
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         height: 35px;
-        margin-left: auto;
-        margin-right: auto;
         border-radius: 5px;
-        overflow-x: hidden;
-        max-width: 700px;
+        max-width: 540px;
+        overflow: hidden;
+        border: 1px solid #CDCDCD;
     }
     .siteGroupList li{
-        border: 1px solid gray;
-        width: 90px;
+        border-right: 1px solid #CDCDCD;
+        min-width: 90px;
         text-align: center;
         padding-top: 5px;
     }
-    .siteGroupList li:first-child{
-        border: none;
-        width: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        padding-top: 0px;
-        display: none;
+    .siteGroupList li:hover{
+        cursor:pointer;
+        background: radial-gradient(circle, rgba(228,228,228,1) 0%, rgba(87,155,235,1) 100%) !important;
     }
     .siteGroupList li:last-child{
         border: none;
-        width: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        padding-top: 0px;
-        display: none;
-    }
-    .siteGroupList .groupArrow .icon{
-        width: 70px;
-        height: 70px;
     }
 }
 .siteList{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 12px;
+    /*padding: 12px;*/
+    padding-top: 10px;
 }
 @media (min-width: 500px){
     .siteList{
         justify-content:flex-start;
-        margin-right: -27px;
-        padding: 24px 12px;
+        width: 900px;
+        margin-left: auto;
+        margin-right: auto;
+        /*margin-right: -27px;
+        padding: 24px 12px;*/
     }
 }
 .siteList > li{
-    margin-bottom: 18px;
-    border: 1px solid #ddd;
+    /*margin-bottom: 18px;*/
+    /*border: 1px solid #ddd;*/
     border-radius: 5px;
 }
 @media (min-width: 500px){
     .siteList > li{
-        margin-right: 27px;
-        margin-bottom: 27px;
-        border: 1px solid #ddd;
+        /*margin-right: 27px;
+        margin-bottom: 27px;*/
+        /*border: 1px solid #ddd;*/
         border-radius: 10px;
     }
+    /*.siteList > li:hover{
+        background: #f1f3f4;
+    }*/
 }
 .siteList .site{
     width: 100px;
@@ -235,15 +267,25 @@ body{
     font-size: 35px;
     text-align: center;
     text-transform: uppercase;
+    border-radius: 50%;
+    background: #f1f3f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .siteList .site  .siteName{
-    font-size: 15px;
-    margin-top: 8px;
+    font-size: 13px;
+    margin-top: 15px;
 }
 .siteList .site .siteMore{
     position: absolute;
-    top: 0;
+    top: 5px;
     right: 0;
+    display: none;
+}
+.siteList .site .siteMore .icon{
+    width: 20px;
+    height: 20px;
 }
 .siteList .siteAddButton{
     width: 100px;
@@ -254,15 +296,21 @@ body{
     flex-direction: column;
 }
 .siteList .siteAddButton  .addIcon{
-   
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #f1f3f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .siteList .siteAddButton .addIcon .icon{
-    width: 30px;
-    height: 30px;
+    width: 24px;
+    height: 24px;
 }
 .siteList .siteAddButton .addText{
-    font-size: 15px;
-    margin-top: 8px;
+    font-size: 13px;
+    margin-top: 15px;
 }
 .globalAside{
     
@@ -320,6 +368,9 @@ body{
     justify-content: center;
     align-items: center;
 }
+.globalAside .settings:hover{
+    cursor: pointer;
+}
 .globalAside .settings .icon{
     width: 25px;
     height: 25px;
@@ -340,8 +391,8 @@ body{
     color: #02AD7C;
 }
 .blank1{
-    height: 100px;
+    height: 80px;
 }
 .blank2{
     height: 10px;
-}
+} 
